@@ -1,7 +1,7 @@
 <!DOCTYPE beans PUBLIC "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
 <beans>
 	<bean id="manager" class="edu.mcw.rgd.dataload.ImportManager">
-        <property name="version" value="phenotype-annotation-pipeline  -- build Jan 02, 2025" />
+        <property name="version" value="phenotype-annotation-pipeline  -- build Mar 28, 2025" />
 	</bean>
 
     <bean id="mgiPhenotype" class="edu.mcw.rgd.dataload.MGIPhenotypeImporter">
@@ -15,8 +15,9 @@
     </bean>
 
     <bean id="hpoPhenotype" class="edu.mcw.rgd.dataload.HPOPhenotypeImporter">
-        <property name="version" value="HPOPhenotypeImporter  -- build Nov 19, 2024" />
+        <property name="version" value="HPOPhenotypeImporter  -- build Mar 28, 2025" />
         <property name="fileURL" value="http://purl.obolibrary.org/obo/hp/hpoa/genes_to_phenotype.txt" />
+        <property name="phenotypeFile" value="https://github.com/obophenotype/human-phenotype-ontology/releases/download/2025-03-03/phenotype.hpoa" />
         <property name="workDirectory" value="data" />
         <property name="owner" value="66" />
         <property name="dataSource" value="HPO" />
